1. Modify Dockerfile 2. Update README.adoc